Atualização, tratando alguns erros, e adicionando a função de tamanho automatico da janela com base no conteudo mostrado

--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,7 @@
-server.urlAPI = http://intranet/glpi
-server.sessionToken = Seu SessionToken
-server.appToken = Seu AppToken
+server.urlAPI = http://intranet/glpi/
+server.userToken = LgblcodFNvCyVFNnL0bPKVBPfsgTvXXTlcXdY8TL
+server.appToken = ticidade
 
-update.tempoUpdate = 3
+update.tempoUpdate = 1
 
-position.posX = 500
-position.posY = 400
-position.height = 350
-position.width = 800
+position.altura = 55
