--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.igorcrrea</groupId>
 	<artifactId>glpiticketalert</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-Beta</version>
 	<name>glpiticketalert</name>
 	<properties>
 		<java.version>17</java.version>
