Create Login Screen, and bug fix , pending: refactoring

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
-server.urlAPI = http://intranet/glpi/
-server.userToken = LgblcodFNvCyVFNnL0bPKVBPfsgTvXXTlcXdY8TL
-server.appToken = ticidade
+server.urlAPI = http://localhost/
+server.userToken = 2qSYPm5mrouiiBg5BQWPs8rYs2nXvaRwJeMTvC32
+server.appToken = teste
 
 update.tempoUpdate = 1
 
-position.altura = 55
+position.height = 55
