Update readme and fix issues

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,2 @@
-server.urlAPI = http://localhost/
-server.userToken = 2qSYPm5mrouiiBg5BQWPs8rYs2nXvaRwJeMTvC32
-server.appToken = teste
-
-update.tempoUpdate = 1
-
+update.updateTime = 1
 position.height = 55
