--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.9.0</version> <!--$NO-MVN-MAN-VER$-->
+			<version>2.9.0</version>
 		</dependency>
 	</dependencies>
 </project>
